protocols/tests/adders/adder_d0/illegal_assignment.out
error: Cannot perform OBSERVED FORBIDDEN PORT on DontCare value in Cannot observe output 's' after assigning DontCare to a dependent input
   ┌─ adders/adder_d0/add_d0.prot:30:7
   │
30 │   if (DUT.s == 32'b0) {
   │       ^^^^^ Cannot perform OBSERVED FORBIDDEN PORT on DontCare value in Cannot observe output 's' after assigning DontCare to a dependent input

